# football-xg

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: team_features.csv
src/football_ai/evaluation/: match_summary.py  metrics.py  visualization.py
src/football_ai/io/: data_writer.py  statsbomb_loader.py
src/football_ai/modeling/: datasets.py  models.py  train.py  xg_model.py
src/football_ai/pipeline/: build_dataset.py  run_experiment.py
src/football_ai/preprocessing/: cleaning.py  feature_engineering.py
