[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-analytics-ai"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "statsbombpy>=1.16.0",
    "mplsoccer>=1.2.0",
    "streamlit>=1.40.0",
    "torch>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "tqdm>=4.66.0",
    "plotly>=5.20.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
football-run = "football_ai.pipeline.run_experiment:main"
football-build-dataset = "football_ai.pipeline.build_dataset:main"
